--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,18 @@
+@charset "UTF-8";
+
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
+@font-face {
+font-family: 'FontAwesome';
+src: url(font-awesome-4.7.0/fonts/fontawesome-webfont.eot);
+font-weight: normal;
+}
+
 html{
 width: 100%;
 height: 100%;
@@ -6,4 +21,27 @@ height: 100%;
 body{
 width: 100%;
 height: 100%;
+}
+
+.pagewrap{
+width: 100%;
+height: 100%;
+background-color: white;
+font-family:'FontAwesome';
+margin: auto;
+padding: 0% 10%;
+}
+
+.navbar{
+  position: fixed;
+  background-color: black;
+  color: white;
+  width: 100%;
+  top: 0;
+  left: 0;
+}
+
+.navbar h2{
+  margin: 10px 10px 15px 10px;
+  font-size: 85%;
 }
