--- a/css/main.css
+++ b/css/main.css
@@ -29,7 +29,6 @@ height: 100%;
 background-color: white;
 font-family:'FontAwesome';
 margin: auto;
-padding: 0% 10%;
 }
 
 .navbar{
@@ -42,6 +41,41 @@ padding: 0% 10%;
 }
 
 .navbar h2{
-  margin: 10px 10px 15px 10px;
-  font-size: 85%;
+  margin: 20px 20px 25px 20px;
+  font-size: 20px;
+  font-size: 3.5vw;
+}
+
+.dropdown {
+    position: fixed;
+    display: inline-block;
+    margin-left: 90%;
+    margin-top: 1.5%;
+    top: 0;
+
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: white;
+    color: black;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    padding: 12px 16px;
+    z-index: 1;
+    width: : 3.5vw;
+    height: auto;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.pageheader{
+  width: 100%;
+}
+
+.pageheader img{
+  width: 100%;
+  position: relative;
 }
