--- a/css/main.css
+++ b/css/main.css
@@ -131,14 +131,178 @@ margin: auto;
   width: 93%;
   margin: auto;
   padding: 30px 0px;
-  border-bottom: 1px solid #cccccc;
+  white-space: nowrap;
+  overflow: hidden;
+  z-index: -10;
 }
 
-.projects{
-  position: relative;
+.project h3{
+  position: absolute;
+  text-align: center;
+  z-index: 10;
+  color: black;
+  padding: 20% 0% 0% 20%;
+  font-size: 170%;
+}
+
+.project h3:hover{
+  color: white;
+}
+
+.project{
+width: 50%;
+height: auto;
+float: left;
+z-index: 0;
+border: 4px solid white;
+opacity: 0.4;
+}
+
+.project:hover{
+  opacity: 1.0;
+}
+
+.bar{
+  width:100%;
+  height:auto;
+}
+
+.project img{
   width: 100%;
+  height: auto;
 }
 
 .pagefooter{
   position: relative;
+  width: 93%;
+  text-align: center;
+  padding: 30px;
+  font-size: 170%;
+  clear: both;
+  border-top: 1px solid #cccccc;
+  bottom: 0;
 }
+
+
+/*
+.project1{
+position: relative;
+}
+
+.project2{
+position: relative;
+}
+
+.project3{
+position: relative;
+}
+
+.project4{
+position: relative;
+}
+
+.project5{
+position: relative;
+}
+
+.project6{
+position: relative;
+}
+
+.project7{
+position: relative;
+}
+
+.project1 img {
+  width: 50%;
+  position: relative;
+  display: inline-block;
+  opacity: 0.35;
+  z-index: -10;
+  float: left;
+}
+
+.project2 img {
+  width: 50%;
+  position: relative;
+  display: inline-block;
+  opacity: 0.35;
+  z-index: -10;
+  float: right;
+}
+
+.project3 img {
+  width: 50%;
+  position: relative;
+  display: inline-block;
+  opacity: 0.35;
+  z-index: -10;
+  float: left;
+}
+
+.project4 img {
+  width: 50%;
+  position: relative;
+  display: inline-block;
+  opacity: 0.35;
+  z-index: -10;
+  float: right;
+}
+
+.project5 img {
+  width: 50%;
+  position: relative;
+  display: inline-block;
+  opacity: 0.35;
+  z-index: -10;
+  float: left;
+}
+
+.project6 img {
+  width: 50%;
+  position: relative;
+  display: inline-block;
+  opacity: 0.35;
+  z-index: -10;
+  float: right;
+}
+
+
+.project7 img {
+  width: 50%;
+  position: relative;
+  display: inline-block;
+  opacity: 0.35;
+  z-index: -10;
+  float: left;
+  clear: both;
+}
+*/
+/*
+.imagecaption h3{
+  color: black;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  overflow: auto;
+  }
+
+.project1 h3{
+  color: black;
+  display: block;
+  position: absolute;
+  overflow: auto;
+  font-size: 170%;
+  padding: 15% 0% 0% 15%;
+}
+
+.project2 h3{
+  color: black;
+  display: block;
+  position: absolute;
+  overflow: auto;
+  font-size: 170%;
+  padding: 15% 0% 0% 15%;
+}
+*/
