--- a/css/fixed.css
+++ b/css/fixed.css
@@ -150,6 +150,7 @@ textarea {
    }
 
    .btn{
+     display: inline-block;
      font-size: 1.25em;
      border: 0.125em solid #000;
      text-decoration: none;
@@ -170,6 +171,8 @@ textarea {
    .jumbotron__bg{
      position: relative;
      z-index: -10;
+     display: block;
+     width: 100%;
    }
 
    .jumbotron__content{
@@ -197,11 +200,40 @@ textarea {
    color: black;
  }
 
+ .project-thumb{
+   position: relative;
+   width: 50%;
+   float: left;
+   background-color: hsla(0, 100%, 100%, 0.75);
+   border: 1px solid white;
+ }
 
+ .project-thumb:hover{
+   background-color: hsla(0, 0%, 0%, 0.5);
+ }
 
+ .project-thumb img{
+   position: relative;
+   z-index: -10;
+ }
 
+ .project-thumb h3{
+   position: absolute;
+   top: 50%;
+   left: 50%;
+   transform: translate(-50%,-50%);
+   margin: 0;
+   text-align: center;
+   color: black;
+ }
 
+.project-thumb:hover h3{
+  color: white;
+}
 
+.page-footer{
+  text-align: center;
+}
 
 
 
